# draconic-bot

./: .dockerignore  .env.example  .gitignore  README.md  __main__.py  bot.py  config.py  emojis.py  github_monitor.py  pyproject.toml  requirements.txt  response_pool.py  run_bot.bat  start_bot.bat  stop_bot.bat  test_faq.py  wowhead.py
ai/: __init__.py  kb.py  metrics.py  prompts.py  provider.py  router.py  safety.py  schemas.py  sessions.py  settings.py
cogs/: about.py  ai_admin.py  announce.py  automod.py  changelog.py  diagnoser.py  dm_guide.py  faq.py  frustration.py  help.py  log_parser.py  lookups.py  onboarding.py  sme_kb.py  triage.py  troubleshooter.py  watchdog.py  welcome_role.py  wowhead_resolver.py
data/: ai_eval_cases.json  diagnose.bat  faq_responses.json  gm_commands.json
deploy/: .env.example  Dockerfile  README_DEPLOY.md  deploy.sh  docker-compose.yml  draconic.service
knowledge/: 00_bot_identity.md  10_server_basics.md  20_client_builds.md  25_arctium_guide.md  30_setup_and_connection.md  40_common_failures.md  50_custom_features.md  60_gm_commands.md  70_staff_handoff_rules.md  kb_manifest.json
tests/: test_ai_harness.py  test_results.json
